[gd_scene load_steps=3 format=2]

[ext_resource path="res://Home.gd" type="Script" id=1]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="PlayButton" type="Button" parent="."]
margin_left = 386.0
margin_top = 225.0
margin_right = 424.0
margin_bottom = 245.0
text = "Play"

[node name="RecordButton" type="Button" parent="."]
margin_left = 286.0
margin_top = 226.0
margin_right = 342.0
margin_bottom = 246.0
text = "Record"

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "VengaBus"

[node name="Label" type="Label" parent="."]
margin_left = 287.0
margin_top = 303.0
margin_right = 338.0
margin_bottom = 317.0
text = "Current:"

[node name="NoteLabel" type="Label" parent="."]
margin_left = 288.0
margin_top = 337.0
margin_right = 328.0
margin_bottom = 351.0
text = "Note:"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="RecordButton" to="." method="_on_RecordButton_pressed"]
